<resources>
    <string name="app_name">Rent</string>
    <string name="UserButton">User</string>
    <string name="ShopButton">Shops</string>
    <string name="etEmail">Email Id</string>
    <string name="etPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="tvLogin">New Here? Click to Register Here</string>
    <string name="etName">Name</string>
    <string name="etPhone">Phone</string>
    <string name="registerBtn">Register</string>
    <string name="register">Already Register? Login Here</string>
    <string name="addUserBtn">Add Shop</string>
    <string name="tv_shop_name">Shop \nName :</string>
    <string name="et_shop_name">   Shop Name</string>
    <string name="tv_shop_detail">Add details about Shop/Tenant</string>
    <string name="et_rent_month">One Month Rent</string>
    <string name="tv_monthly_rent">Monthly \nRent :</string>
    <string name="tv_complex_name">Complex \nName :</string>
    <string name="tv_complex_add">Complex \nAddress :</string>
    <string name="tv_total_shop">Total \nShop :</string>
    <string name="tv_rent_paid_upto">Paid \nrent :</string>
    <string name="et_paid_amount_of_rent">Paid Amount </string>
    <string name="tv_pending_amount">Pending \nAmount :</string>
    <string name="et_pending_amount">Pending Amount </string>
    <string name="tv_default_month">Default \nMonth :</string>
    <string name="et_default_month"> Default month</string>
    <string name="save_btn">Save</string>
    <string name="editBtn">Edit</string>
    <string name="et_Complex_Name">Name of complex</string>
    <string name="shop_name">Shop\nName:-</string>
    <string name="monthly_rent">Monthly \nRent:-</string>
    <string name="pending_amount">Pending \nAmount:-</string>
</resources>