<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:screenOrientation="portrait"
    tools:context=".user_detail">

    <TextView
        android:id="@+id/tvShopDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/tv_shop_detail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_shop_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <android.widget.EditText
        android:id="@+id/etShopName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/et_shop_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#A39F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/tvRentMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_monthly_rent"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <android.widget.EditText
        android:id="@+id/etRent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/et_rent_month"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#A39F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/tvComplexName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_complex_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/tvRentUpto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rent_paid_upto"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <android.widget.EditText
        android:id="@+id/etRentPaid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/et_paid_amount_of_rent"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#A39F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPendingAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pending_amount"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723" />

    <android.widget.EditText
        android:id="@+id/etPendingAmount"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/et_pending_amount"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#A39F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/tvDefaultMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_default_month"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <android.widget.EditText
        android:id="@+id/etDefaultMonth"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/et_default_month"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#A39F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <android.widget.Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/button"
        android:onClick="setBtnSave"
        android:text="@string/save_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:spinnerMode="dropdown"
        android:dropDownWidth="250dp"
        android:dropDownHeight="70dp"
        android:popupBackground="@color/status_bar"
        android:background="@drawable/spinner_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"/>

    <android.widget.EditText
        android:visibility="invisible"
        android:id="@+id/editComplexName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/et_Complex_Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#A39F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

</androidx.constraintlayout.widget.ConstraintLayout>